# afpacket

./: Cargo.toml  LICENSE  README.md
examples/: async_read.rs  async_std_read.rs  async_tokio_read.rs  sync_read.rs
src/: async.rs  async_std.rs  lib.rs  sync.rs  tokio.rs
src/sync/: darwin.rs  linux.rs  mod.rs
