[package]
name = "afpacket"
version = "0.1.6"
authors = ["The afpacket Authors <oss@nyantec.com>"]
description = "Bindings for Linux raw packet sockets (AF_PACKET), and an async wrapper"
repository = "https://github.com/nyantec/afpacket"
license = "MirOS"
readme = "README.md"
keywords = ["async", "raw", "socket"]
categories = ["network-programming","os"]
edition = "2018"

[dependencies]
libc = "0.2"
futures-lite = { version = "1.11", optional = true }
async-io = { version = "1.4", optional = true }

[features]
async = [ "futures-lite", "async-io" ]
default = [ "async" ]

[dev-dependencies]
nom = "6.1"
