[package]
name = "afpacket"
version = "0.2.1"
authors = ["The afpacket Authors <oss@nyantec.com>"]
description = "Bindings for Linux raw packet sockets (AF_PACKET), and an async wrapper"
repository = "https://github.com/nyantec/afpacket"
license = "MirOS"
readme = "README.md"
keywords = ["async", "raw", "socket"]
categories = ["network-programming","os"]
edition = "2018"

[dependencies]
libc = "0.2"
futures-lite = { version = "1.11", optional = true }
async-io = { version = "1.4", optional = true }
tokio = { version = "1.14", features = [ "net" ], optional = true }

[features]
async-std = [ "futures-lite", "async-io" ]
async-tokio = [ "futures-lite", "tokio" ]

[dev-dependencies]
nom = "6.1"
tokio = { version = "1.14", features = [ "net", "macros", "rt-multi-thread", "io-util" ] }
